# zephyr

./: CODEOWNERS  Kconfig.zephyr  MCUBOOT_SAM  west.yml
cmake/emu/: qemu.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/counter/: counter_sam_tc.c
drivers/dma/: dma_stm32.c  dma_stm32.h  dma_stm32_v1.c  dma_stm32_v2.c
drivers/flash/: CMakeLists.txt  Kconfig.sam  flash_sam.c  flash_sam_flashcalw.c
drivers/gpio/: CMakeLists.txt  Kconfig.sam  gpio_sam4l.c
drivers/hwinfo/: Kconfig  hwinfo_sam4l.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_sam_twim.c
drivers/interrupt_controller/: Kconfig  intc_nuclei_eclic.c
drivers/pinctrl/: CMakeLists.txt  Kconfig
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.bl  Kconfig.gd32  Kconfig.usart_sam  Kconfig.usart_sam4l  uart_bl.c  usart_gd32.c  usart_sam.c
drivers/sigfox/: CMakeLists.txt  Kconfig  Kconfig.st_s2lp  st_s2lp.c  st_s2lp.h  st_s2lp_iface.c  st_s2lp_iface.h  st_s2lp_regs.h  st_s2lp_rf.c  st_s2lp_rf.h
drivers/spi/: Kconfig.sam  spi_ll_stm32.c  spi_ll_stm32.h  (+1 more)
samples/drivers/sigfox/send/: CMakeLists.txt  Kconfig  iar.rtmodel.ld  iar.vfe.ld  prj.conf  sample.yaml
samples/drivers/sigfox/send/boards/: b_l072z_lrwan1.overlay  disco_l475_iot1.conf  disco_l475_iot1.overlay  frdm_k64f.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay  nucleo_l053r8.conf  nucleo_l053r8.overlay  sam_v71_xult.overlay
samples/drivers/sigfox/send/inc/: main.h  sigfox_api.h  sigfox_zephyr.h
samples/drivers/sigfox/send/src/: main.c  mcu_zephyr.c  monarch_public.txt  monarch_zephyr.c  pinmux.c  radio_zephyr.c  sigfox_public.txt
(+181 files in other folders)
